crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__bits.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"bits$\")"
---
[
    CompletionItem {
        label: "assert",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "class",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "def",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "dump",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "foreach",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "defm",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "defset",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "defvar",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "if",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "include",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "let",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
    CompletionItem {
        label: "multiclass",
        insert_text_snippet: None,
        detail: "",
        kind: Keyword,
    },
]
