crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__doc_comment-2.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(r#\"\n// doc comment for def\ndef foo;\ndefvar tmp = f$\n            \"#)"
---
[
    CompletionItem {
        label: "false",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "foo",
        insert_text_snippet: None,
        detail: "def",
        documentation: Some(
            "doc comment for def",
        ),
        kind: Def,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Record {
                data: DefinedRecord(
                    Def(
                        Id {
                            idx: 0,
                        },
                    ),
                ),
                name: "foo",
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "true",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
]
