crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__doc_comment-3.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(r#\"\nclass Foo {\n    // doc comment for field\n    int field1;\n}\nclass Bar<Foo foo> {\n    int x = foo.f$\n}\n            \"#)"
---
[
    CompletionItem {
        label: "field1",
        insert_text_snippet: None,
        detail: "int",
        documentation: Some(
            "doc comment for field",
        ),
        kind: Field,
        sort_text: Some(
            "0",
        ),
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
]
