crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__doc_comment-4.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(r#\"\n// doc comment for multiclass\nmulticlass Foo;\ndefm bar : F$\n            \"#)"
---
[
    CompletionItem {
        label: "Foo",
        insert_text_snippet: Some(
            "Foo$0",
        ),
        detail: "multiclass",
        documentation: Some(
            "doc comment for multiclass",
        ),
        kind: Multiclass,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
]
