crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__doc_comment.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(r#\"\n// doc comment for class\nclass Foo;\nclass Bar : F$\n            \"#)"
---
[
    CompletionItem {
        label: "Foo",
        insert_text_snippet: Some(
            "Foo$0",
        ),
        detail: "class",
        documentation: Some(
            "doc comment for class",
        ),
        kind: Class,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Record {
                data: DefinedRecord(
                    Class(
                        Id {
                            idx: 0,
                        },
                    ),
                ),
                name: "Foo",
                _priv: (),
            },
        ),
    },
]
