crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__field_let-2.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"class Foo { int Bar; int Baz; } class Foo2 : Foo { let B$\")"
---
[
    CompletionItem {
        label: "Bar",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "Baz",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
]
