crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__field_let-3.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"class Foo { int field1; } def foo : Foo { let f$\")"
---
[
    CompletionItem {
        label: "field1",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
]
