crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__field_suffix-3.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"class Foo { int field1; int field2; } class Bar { Foo foo; } class Baz<Bar bar> { int x = bar.foo.f$\",)"
---
[
    CompletionItem {
        label: "field1",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: Some(
            "0",
        ),
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "field2",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: Some(
            "0",
        ),
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
]
